--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="top__side">
                 <nav class="wrapper__nav">
                     <div class="wrapper__logo">
-                        <img src="./img/Logo.svg" class="logo" alt="Website Logo">
+                        <img src="./img/Logo.svg" class="logo click-logo" alt="Website Logo">
                     </div>
                     <ul class="wrapper__list">
                         <li class="wrapper__item">
@@ -379,6 +379,28 @@
             </div>
         </footer>
     </div>
+
+    <aside class="aside">
+        <div class="container">
+            <ul class="aside__list">
+                <li class="aside__item">
+                    <a href="#!" class="aside__link">Home</a>
+                </li>
+                <hr>
+                <li class="aside__item">
+                    <a href="#!" class="aside__link">TV Shows</a>
+                </li>
+                <hr>
+                <li class="aside__item">
+                    <a href="#!" class="aside__link">Movies</a>
+                </li>
+                <hr>
+                <li class="aside__item">
+                    <a href="#!" class="aside__link">Series</a>
+                </li>
+            </ul>
+        </div>
+    </aside>
 
 
 
